force-app/main/default/objects/OpportunityAccountRoles__c/OpportunityAccountRoles__c.object-meta.xml
<CustomObject>
    <label>Opportunity Account Role</label>
    <nameField>
        <displayFormat>ROLE-{00000}</displayFormat>
        <label>Opportunity Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Account Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>