force-app/main/default/objects/OpportunityAccountRoles__c/fields/BuildingProject__c.field-meta.xml
<CustomField>
    <fullName>BuildingProject__c</fullName>
    <label>Building Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Building_Project_Account_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>