force-app/main/default/objects/OpportunityAccountRoles__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Builder/ Awarding Office</fullName>
            </value>
            <value>
                <fullName>Building Authority</fullName>
            </value>
            <value>
                <fullName>General Constructor</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Planner of cladding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>